# pybioregions

./: README.md  pybioregions.ipynb  pyproject.toml  requirements.txt
src/pybioregions/: __init__.py  bioregions.py
